--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "coverage:text": "nyc --reporter text npm test",
     "lint": "npm run lint:check",
     "lint:check": "eslint ./src/**.js ./test/**.test.js -c .eslintrc",
-    "lint:fix": "npm run lint:check -- --fix"
+    "lint:fix": "npm run lint:check -- --fix",
+    "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
